--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "rimraf": "^5.0.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
