--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "plugin-calendar-hrnet14",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "start": "react-scripts start",
-    "build-examples": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "NODE_ENV=development react-scripts start",
+    "build-examples": "NODE_ENV=production react-scripts build",
+    "test": "NODE_ENV=test react-scripts test",
     "eject": "react-scripts eject",
     "build": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
   },
